<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:title="@string/menu_filter_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_show_all"
                    android:title="@string/menu_show_all"
                    android:checked="true"/>
                <item
                    android:id="@+id/action_show_favorites"
                    android:title="@string/menu_show_favorites" />
                <item
                    android:id="@+id/action_show_trash"
                    android:icon="@drawable/ic_delete_outline"
                    android:title="@string/menu_show_trash" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_empty_trash"
        android:title="@string/menu_empty_trash"
        android:icon="@drawable/ic_delete_sweep"
        app:showAsAction="ifRoom" />

</menu>
